# imgret

./: README.md  pyproject.toml
src/imgret/: database.py  main.py  models.py  utils.py
tests/: test_imgret.py
