[tool.poetry]
name = "imgret"
version = "0.1.0"
description = ""
authors = ["georg <georg.squared@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
imgret = "imgret.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typer = "^0.4.1"
SQLAlchemy = "^1.4.37"
opencv-python = "^4.6.0"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
